Add new projek - Final Project

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /RatingFilm/build/
 /RatingFilm/dist/
 /MVC/006 - contact list/dist/
+/UAS/dist/
+/Inventaris/nbproject/private/
+/Inventaris/build/
+/Inventaris/dist/
